--- a/index.html
+++ b/index.html
@@ -222,6 +222,7 @@
     high_score_updated = False
 
     audio_unlocked = False  # To manage audio playback after loading
+    animation_running = False  # Prevent multiple animation loops
 
     player_pos = [WIDTH // 2 - PLAYER_HITBOX_SIZE // 2, HEIGHT - 2 * PLAYER_HITBOX_SIZE]
     boss_pos = [WIDTH // 2 - BOSS_SIZE // 2, 50]
@@ -545,6 +546,9 @@
         game_started = True
         level_start_time = window.Date.new().getTime()
 
+        # Play level-specific audio
+        set_music_for_level(level)
+
         # Log the game initialization
         window.console.log(f"Initialized Level {level}. Starting gameplay.")
 
@@ -554,7 +558,7 @@
         """
         global level, game_started, game_over, score
         global showing_level_title, showing_final_score, showing_high_score_prompt
-        global final_score_scheduled
+        global final_score_scheduled, animation_running
 
         level = 1
         game_over = False
@@ -566,7 +570,9 @@
         final_score_scheduled = False
 
         set_music_for_title_screen()  # Play title audio on loop
-        window.requestAnimationFrame(animate_title_screen)  # Initiate animation loop
+
+        if not animation_running:
+            window.requestAnimationFrame(animate_title_screen)  # Initiate animation loop
 
     # -------------------------------------------------
     # 9) DRAWING / RENDERING
@@ -688,7 +694,7 @@
 
     def draw_level_title():
         """Displays the level title screen and schedules game initialization."""
-        global level
+        global level, showing_level_title
 
         ctx.clearRect(0, 0, WIDTH, HEIGHT)
         move_stars()
@@ -778,6 +784,8 @@
                 )
 
     def draw_final_score():
+        global showing_final_score
+
         ctx.clearRect(0, 0, WIDTH, HEIGHT)
         move_stars()
         draw_stars()
@@ -859,7 +867,7 @@
     def handle_keydown(event):
         global game_started, game_over, player_last_shot, showing_level_title
         global showing_final_score, showing_high_score_prompt, final_score_scheduled
-        global audio_unlocked
+        global audio_unlocked, animation_running
 
         current_time = window.Date.new().getTime()
 
@@ -872,7 +880,8 @@
                 audio_unlocked = True
                 set_music_for_title_screen()
                 initialize_high_score()
-                window.requestAnimationFrame(animate_title_screen)
+                if not animation_running:
+                    window.requestAnimationFrame(animate_title_screen)
             return  # Prevent further processing until loading is complete
 
         if event.keyCode == 32:  # SPACE
@@ -948,27 +957,30 @@
                 for bullet in bullets[:]:
                     # Check collision based on hitbox
                     if (enemy["pos"][0] <= bullet[0] <= enemy["pos"][0] + ENEMY_SIZE and
-                        enemy["pos"][1] <= bullet[1] <= enemy["pos"][1] + ENEMY_SIZE):
+                        enemy["pos"][1] <= bullet["y"] <= enemy["pos"][1] + ENEMY_SIZE):
                         enemies.remove(enemy)
                         bullets.remove(bullet)
                         score += 1
                         explosion_audio.play()
+                        window.console.log(f"Enemy hit! Score: {score}")
                         break
         else:
             # Collisions with boss
             for bullet in bullets[:]:
                 if (boss_pos[0] <= bullet[0] <= boss_pos[0] + BOSS_SIZE and
-                    boss_pos[1] <= bullet[1] <= boss_pos[1] + BOSS_SIZE):
+                    boss_pos[1] <= bullet["y"] <= boss_pos[1] + BOSS_SIZE):
                     bullets.remove(bullet)
                     boss_hits += 1
                     explosion_audio.play()
+                    window.console.log(f"Boss hit! Total hits: {boss_hits}")
 
         # Collisions with player
         for bullet in enemy_bullets[:]:
             # Check collision based on hitbox
             if (player_pos[0] <= bullet[0] <= player_pos[0] + PLAYER_HITBOX_SIZE and
-                player_pos[1] <= bullet[1] <= player_pos[1] + PLAYER_HITBOX_SIZE):
+                player_pos[1] <= bullet["y"] <= player_pos[1] + PLAYER_HITBOX_SIZE):
                 game_over = True
+                window.console.log("Player hit by enemy bullet! Game Over.")
 
         for laser in laser_beams[:]:
             # Check collision with laser beam
@@ -976,12 +988,14 @@
                 laser["x"] <= player_pos[0] + PLAYER_HITBOX_SIZE and
                 player_pos[1] <= laser["y"]):
                 game_over = True
+                window.console.log("Player hit by laser beam! Game Over.")
 
         for shot in diagonal_shots[:]:
             # Check collision with diagonal shots
             if (player_pos[0] <= shot["x"] <= player_pos[0] + PLAYER_HITBOX_SIZE and
                 player_pos[1] <= shot["y"] <= player_pos[1] + PLAYER_HITBOX_SIZE):
                 game_over = True
+                window.console.log("Player hit by diagonal shot! Game Over.")
 
         # Enemy/player overlap (normal levels)
         if level <= MAX_LEVELS:
@@ -991,6 +1005,7 @@
                     if (enemy["pos"][1] <= player_pos[1] <= enemy["pos"][1] + ENEMY_SIZE or
                         enemy["pos"][1] <= player_pos[1] + PLAYER_HITBOX_SIZE <= enemy["pos"][1] + ENEMY_SIZE):
                         game_over = True
+                        window.console.log("Player collided with enemy! Game Over.")
 
             # Enemy movement
             move_down = False
@@ -1002,20 +1017,24 @@
                 for enemy in enemies:
                     enemy["pos"][1] += ENEMY_SIZE
                 ENEMY_SPEED = -ENEMY_SPEED  # Reverse direction
+                window.console.log(f"Enemies moving down. New ENEMY_SPEED: {ENEMY_SPEED}")
         else:
             # Boss movement
             boss_pos[0] += boss_direction * 10
             if boss_pos[0] <= 0 or boss_pos[0] >= WIDTH - BOSS_SIZE:
                 boss_direction *= -1
+                window.console.log(f"Boss direction changed to {boss_direction}")
             boss_pos[1] += window.Math.random() * 10 - 5
             boss_pos[1] = max(0, min(HEIGHT // 4, boss_pos[1]))
 
         # Check for level completion or boss defeat
         if level <= MAX_LEVELS and not enemies:
+            window.console.log(f"Level {level} completed!")
             level_up()
         elif level > MAX_LEVELS and boss_hits >= BOSS_HITS_REQUIRED:
             game_over = True
             show_final_score()
+            window.console.log("Boss defeated! Game Over.")
 
         # Render the frame
         draw()
@@ -1037,12 +1056,14 @@
                         enemy["pos"][0] + ENEMY_SIZE // 2,
                         enemy["pos"][1] + ENEMY_SIZE
                     ])
+                    window.console.log(f"Enemy shooting bullet from {enemy['pos']}")
         else:
             if window.Math.random() < 0.1:
                 enemy_bullets.append([
                     boss_pos[0] + BOSS_SIZE // 2,
                     boss_pos[1] + BOSS_SIZE
                 ])
+                window.console.log(f"Boss shooting bullet from {boss_pos}")
             current_time = window.Date.new().getTime()
             if current_time - boss_last_laser > boss_laser_cooldown:
                 laser_beams.append({
@@ -1051,6 +1072,7 @@
                     "timestamp": current_time
                 })
                 boss_last_laser = current_time
+                window.console.log("Boss firing laser beam.")
             if current_time - boss_last_diagonal_shot > boss_diagonal_cooldown:
                 diagonal_shots.append({
                     "x": boss_pos[0] + BOSS_SIZE // 2,
@@ -1065,6 +1087,7 @@
                     "dy": 5
                 })
                 boss_last_diagonal_shot = current_time
+                window.console.log("Boss firing diagonal shots.")
 
     def level_up():
         global level, showing_level_title, score
@@ -1099,18 +1122,24 @@
                 showing_high_score_prompt = True
                 break
         showing_final_score = True
-        draw_final_score()
+        window.console.log("Showing final score.")
+        # The animation loop will handle drawing the final score
 
     # -------------------------------------------------
     # 15) ANIMATION FUNCTIONS
     # -------------------------------------------------
     def animate_title_screen(frame):
+        global animation_running
+        if not animation_running:
+            animation_running = True
+
         if showing_final_score:
             draw_final_score()
         elif showing_level_title:
             draw_level_title()
         elif not game_started:
             draw_start_screen()
+
         window.requestAnimationFrame(animate_title_screen)
 
     # -------------------------------------------------
