--- a/index.html
+++ b/index.html
@@ -549,8 +549,8 @@
         # Play level-specific audio
         set_music_for_level(level)
 
-        # Log the game initialization
-        window.console.log(f"Initialized Level {level}. Starting gameplay.")
+        # Log the game initialization and number of enemies
+        window.console.log(f"Initialized Level {level}. Number of enemies: {len(enemies)}. Starting gameplay.")
 
     def reset_game():
         """
@@ -573,6 +573,8 @@
 
         if not animation_running:
             window.requestAnimationFrame(animate_title_screen)  # Initiate animation loop
+            animation_running = True
+            window.console.log("Animation loop started.")
 
     # -------------------------------------------------
     # 9) DRAWING / RENDERING
@@ -793,6 +795,11 @@
         ctx.fillStyle = "white"
         ctx.font = "48px 'Press Start 2P'"
         ctx.textAlign = "center"
+
+        # Display "Game Over"
+        ctx.fillText("Game Over", WIDTH // 2, HEIGHT // 3)
+
+        # Display Final Score
         ctx.fillText(f"Final Score: {score}", WIDTH // 2, HEIGHT // 2)
 
         if high_score_updated:
@@ -800,6 +807,7 @@
             ctx.fillText("New High Score!", WIDTH // 2, HEIGHT // 1.7)
             show_high_score_prompt()
         else:
+            # Transition back to title screen after 3 seconds
             window.setTimeout(reset_game, 3000)  # Use setTimeout with correct case
 
     def show_high_score_prompt():
@@ -955,20 +963,21 @@
         if level <= MAX_LEVELS:
             for enemy in enemies[:]:
                 for bullet in bullets[:]:
-                    # Check collision based on hitbox
+                    # Corrected collision detection using bullet[1]
                     if (enemy["pos"][0] <= bullet[0] <= enemy["pos"][0] + ENEMY_SIZE and
-                        enemy["pos"][1] <= bullet["y"] <= enemy["pos"][1] + ENEMY_SIZE):
+                        enemy["pos"][1] <= bullet[1] <= enemy["pos"][1] + ENEMY_SIZE):
                         enemies.remove(enemy)
                         bullets.remove(bullet)
                         score += 1
                         explosion_audio.play()
                         window.console.log(f"Enemy hit! Score: {score}")
                         break
+
         else:
             # Collisions with boss
             for bullet in bullets[:]:
                 if (boss_pos[0] <= bullet[0] <= boss_pos[0] + BOSS_SIZE and
-                    boss_pos[1] <= bullet["y"] <= boss_pos[1] + BOSS_SIZE):
+                    boss_pos[1] <= bullet[1] <= boss_pos[1] + BOSS_SIZE):
                     bullets.remove(bullet)
                     boss_hits += 1
                     explosion_audio.play()
@@ -976,9 +985,9 @@
 
         # Collisions with player
         for bullet in enemy_bullets[:]:
-            # Check collision based on hitbox
+            # Corrected collision detection using bullet[1]
             if (player_pos[0] <= bullet[0] <= player_pos[0] + PLAYER_HITBOX_SIZE and
-                player_pos[1] <= bullet["y"] <= player_pos[1] + PLAYER_HITBOX_SIZE):
+                player_pos[1] <= bullet[1] <= player_pos[1] + PLAYER_HITBOX_SIZE):
                 game_over = True
                 window.console.log("Player hit by enemy bullet! Game Over.")
 
@@ -1018,6 +1027,7 @@
                     enemy["pos"][1] += ENEMY_SIZE
                 ENEMY_SPEED = -ENEMY_SPEED  # Reverse direction
                 window.console.log(f"Enemies moving down. New ENEMY_SPEED: {ENEMY_SPEED}")
+
         else:
             # Boss movement
             boss_pos[0] += boss_direction * 10
